# fastapi-htmx-tailwind-example

./: .uvicorn.env  Procfile  README.md  pyproject.toml  tailwind.config.js
app/: api.py  constants.py  database.py  jinja.py  lifespan.py  main.py
app_model/: config.py
app_model/device/: api.py  model.py  service.py  ui_api.py
app_model/event/: event_source.py  model.py
app_model/sales_event/: api.py  model.py
app_model/telemetry_event/: api.py  model.py
static/: tailwind.css
templates/: base.jinja  close-dialog-button.jinja  confirmation-dialog.jinja
templates/app_model/device/: delete-device-dialog.jinja  device-editor-dialog.jinja  device-editor-form.jinja  devices-table.jinja  devices.jinja
templates/app_model/sales_event/: sales-event-table-row.jinja  sales-events-of-device-dialog.jinja  sales-events-table.jinja
templates/app_model/sales_event/macros/: sales-event-table-row.jinja
templates/app_model/telemetry_event/: telemetry-event-table-row.jinja  telemetry-events-of-device-dialog.jinja  telemetry-events-table.jinja
templates/app_model/telemetry_event/macros/: telemetry-event-table-row.jinja
templates/icons/: bug.jinja  dollar.jinja  pencil.jinja  source.md  trash.jinja
tests/: test_nothing.py
